# open_manipulator_7dof

./: README.md
open_manipulator_7dof/: CMakeLists.txt  package.xml
open_manipulator_7dof_control_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_7dof_control_gui/include/open_manipulator_7dof_control_gui/: main_window.hpp  qnode.hpp
open_manipulator_7dof_control_gui/launch/: open_manipulator_7dof_control_gui.launch
open_manipulator_7dof_control_gui/src/: main.cpp  main_window.cpp  qnode.cpp
open_manipulator_7dof_control_gui/ui/: main_window.ui
open_manipulator_7dof_controller/: CMakeLists.txt  package.xml
open_manipulator_7dof_controller/include/open_manipulator_7dof_controller/: open_manipulator_7dof_controller.h
open_manipulator_7dof_controller/launch/: open_manipulator_7dof_controller.launch
open_manipulator_7dof_controller/scripts/: create_udev_rules
open_manipulator_7dof_controller/src/: open_manipulator_7dof_controller.cpp
open_manipulator_7dof_description/: CMakeLists.txt  package.xml
open_manipulator_7dof_description/launch/: open_manipulator_7dof_rviz.launch  open_manipulator_7dof_upload.launch
open_manipulator_7dof_description/rviz/: open_manipulator_7dof.rviz  open_manipulator_7dof_with_gripper.rviz
open_manipulator_7dof_description/urdf/: materials_include.xacro  open_manipulator_7dof.gazebo.xacro  open_manipulator_7dof.urdf.old  open_manipulator_7dof.urdf.xacro  open_manipulator_7dof_include.gazebo.xacro  open_manipulator_7dof_include.transmission.xacro  open_manipulator_7dof_include.urdf.xacro.backup  open_manipulator_7dof_robot.urdf  open_manipulator_7dof_robot.urdf.xacro  open_manipulator_7dof_robot_include.urdf  open_manipulator_7dof_robot_include.urdf.xacro  open_manipulator_7dof_with_gripper.urdf.xacro
open_manipulator_7dof_libs/: CMakeLists.txt  package.xml
open_manipulator_7dof_libs/src/: custom_trajectory.cpp  dynamixel.cpp  kinematics.cpp  open_manipulator_7dof.cpp  open_manipulator_p.cpp
open_manipulator_7dof_teleop/: CMakeLists.txt  package.xml
open_manipulator_7dof_teleop/launch/: open_manipulator_7dof_teleop_joystick.launch  open_manipulator_7dof_teleop_keyboard.launch
open_manipulator_7dof_teleop/src/: open_manipulator_7dof_teleop_joystick.cpp  open_manipulator_7dof_teleop_keyboard.cpp
